# imago-hs

./: .gitignore  .travis.yml  README.md  hs-gui-demo.cabal  imago-wx-gui.cabal  imago.cabal  install-deps.sh
imag-wx-gui/: LICENSE  install-deps.sh
imag-wx-gui/src/: Repa2WX.hs
imago/: LICENSE  imago.cabal  stack-7.24.yaml  stack-9.1.yaml  stack.yaml
imago-opencv-test/: imago-opencv-test.cabal  stack-9.1.yaml
imago-opencv-test/src/: Main.hs
imago-wx-gui/: .gitignore  imago-wx-gui.cabal  install-deps.sh  stack-9.1.yaml
imago-wx-gui/src/: Camera.hs  Counter.hs  Main.hs  Repa2WX.hs  RevHough.hs
imago/src/: Main.hs
imago/src/Imago/: Conv.hs  RANSAC.hs
src/: Camera.hs  Imago.hs  Main.hs  RANSAC.hs  Repa2WX.hs  RevHough.hs
src/Imago/: Conv.hs  Filters.hs  Hough.hs  RANSAC.hs  Types.hs
