name:                hs-gui-demo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tomas Musil
maintainer:          tomik.musil@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hs-gui-demo
  main-is:             Main.hs
  other-modules:    Repa2WX
                  , RevHough
  -- other-extensions:    
  build-depends:  base >=4.6 && <4.8
                , array
                , wx
                , wxcore
                , reactive-banana
                , reactive-banana-wx
                , repa >= 0.3.3.1
                , repa-algorithms >= 0.3.3.1
                , JuicyPixels
                , JuicyPixels-canvas
                , JuicyPixels-repa
                , imago
                , random
                , MonadRandom
                , hmatrix
                , HOpenCV 
  hs-source-dirs: src
  default-language:    Haskell2010
