name:                imago-opencv-test
version:             0.1.0.0
synopsis:            Imago OpenCV test
-- description:         
homepage:            http://tomasm.cz/imago
license:             BSD3
license-file:        LICENSE
author:              Tomáš Musil
maintainer:          tomik.musil@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable imago-opencv-test
  main-is:             Main.hs
  -- other-extensions:    
  build-depends: base >=4.6 && <4.8
               , HOpenCV
               , imago
               , repa
               , repa-algorithms
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
